fixed content jumping issue on safety page and added disabled to footer and sidenav

--- a/src/pages/Home/BlogDetails.css
+++ b/src/pages/Home/BlogDetails.css
@@ -4,6 +4,13 @@
     margin: 152px auto 65px auto;
     line-height: 1.6rem;
     font-size: 1.125rem;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.safety {
+    flex: 1;
 }
 
 .date span.content {
